scrollbar fix (and docs)

--- a/src/css/scrollbar.css
+++ b/src/css/scrollbar.css
@@ -1,19 +1,26 @@
 /* https://css-tricks.com/the-current-state-of-styling-scrollbars/ */
+/*
+the <body> element doesn't have access to the css variables for the color palettes
+and cannot have dynamically inserted code in it from svelte kit (which inserts the css variables into the <main> element)
+therefore, we provide default values for the rgb color for the base gray (not bluegray) palette
+for the scrollbar if the variables are not available, as is the case with the body scrollbar
+for example, if you have many worldclocks and have to scroll down in the body element
+*/
 
 *::-webkit-scrollbar {
 	width: 1rem;
 }
 * {
 	scrollbar-width: thin;
-	scrollbar-color: rgb(var(--base-500)) rgb(var(--base-200));
+	scrollbar-color: rgb(var(--base-500, 113, 113, 122)) rgb(var(--base-200, 228, 228, 231));
 }
 *::-webkit-scrollbar-track {
-	background: rgb(var(--base-200));
+	background: rgb(var(--base-200, 228, 228, 231));
 }
 *::-webkit-scrollbar-thumb {
-	background-color: rgb(var(--base-500));
-	border: 0.25rem solid rgb(var(--base-200));
+	background-color: rgb(var(--base-500, 113, 113, 122));
+	border: 0.25rem solid rgb(var(--base-200, 228, 228, 231));
 }
 *::-webkit-scrollbar-thumb:hover {
-	background-color: rgb(var(--base-600));
+	background-color: rgb(var(--base-600, 82, 82, 91));
 }
